# poll_manager

./: .gitignore  Dockerfile  README.md  enrtypoint.sh  pyproject.toml
poll_manager/: manage.py
poll_manager/handler/: admin.py  models.py  urls.py  utils.py  views.py
poll_manager/poll_manager/: settings.py  urls.py  wsgi.py
tests_folder/: test_req.py
