[tool.poetry]
name = "poll_manager"
version = "0.1.0"
description = ""
authors = ["smapl <a.mustafin00@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^2.2.10"
django-admin = "^2.0.1"
logger = "^1.4"
loguru = "^0.5.3"
requests = "^2.25.1"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
